# TrajectoryMetrics

./: CMakeLists.txt  README.md
src/: main.cpp
src/common/: constants.h  output.h  time_point.h
src/math/: euclidean_distance.h  length_difference.h  speed_difference.h
src/math/impl/: euclidean_distance.cpp  length_difference.cpp  speed_difference.cpp
src/utils/: menu.h  parser.h  timer.h
src/utils/impl/: menu.cpp  parser.cpp
